# wormy_arm

./: .gitmodules  LICENSE  README.md
docs/development_notes/software/: 01_urdf.md
wormy_arm_bringup/: CMakeLists.txt  package.xml
wormy_arm_bringup/launch/: wormy_short_bringup.launch
wormy_arm_control/: CMakeLists.txt  package.xml
wormy_arm_control/config/: dynamixel.yaml
wormy_arm_control/include/wormy_arm_control/: dynamixel_driver.h  visibility_control.h  wormy_arm_hardware_interface.h  yaml_parser.h
wormy_arm_control/launch/: wormy_arm_control.launch
wormy_arm_control/src/: dynamixel_driver.cpp  wormy_arm_control.cpp  wormy_arm_hardware_interface.cpp  yaml_parser.cpp
wormy_arm_description/: CMakeLists.txt  package.xml
wormy_arm_description/launch/: display_wormy_arm.launch
wormy_arm_description/urdf/: wormy_arm_macro.xacro  wormy_arm_onbox.xacro  wormy_short.urdf.xacro  wormy_short_macro.urdf.xacro
wormy_arm_gazebo/: CMakeLists.txt  package.xml
wormy_arm_gazebo/launch/: wormy_short_gazebo.launch
wormy_arm_gazebo/urdf/: wormy_gazebo.urdf  wormy_short_gazebo.urdf.xacro
wormy_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
wormy_arm_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  wormy_arm_robot.srdf
wormy_arm_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  wormy_arm_robot_moveit_controller_manager.launch.xml
(+87 files in other folders)
